--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       <a href="#" class="w3-bar-item w3-button">John Doe posted on your wall</a>
       <a href="#" class="w3-bar-item w3-button">Jane likes your post</a>
     </div>
+	<a href="https://webchat.botframework.com/embed/webbot-wragb68?t=RmwPpHTNRlk.yhtM4fjvdg5xxwzDeITaIrThHa6GSNp5-TNyNQjGo4M
+" style="width: 40px; height: 40px;" src=''" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="far fa-comments w3-margin-right"></i>BOT</a>
   </div>
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account">
     <img src="https://avatars.githubusercontent.com/u/133674582?s=400&u=929f972579bd25dc326ebdc1bf721ef1ed7dd2a7&v=4" class="w3-circle" style="height:23px;width:23px" alt="Avatar">
