--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       <a href="#" class="w3-bar-item w3-button">John Doe posted on your wall</a>
       <a href="#" class="w3-bar-item w3-button">Jane likes your post</a>
     </div>
-	<a href="https://webchat.botframework.com/embed/webbot-wragb68?t=RmwPpHTNRlk.yhtM4fjvdg5xxwzDeITaIrThHa6GSNp5-TNyNQjGo4M
-" style="width: 40px; height: 40px;" src=''" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="far fa-comments w3-margin-right"></i>BOT</a>
+	<a href="https://webchat.botframework.com/embed/webbot-wragb68?t=RmwPpHTNRlk.yhtM4fjvdg5xxwzDeITaIrThHa6GSNp5-TNyNQjGo4M" style="width: 40px; height: 40px;" src=''" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="far fa-comments w3-margin-right"></i>BOT</a>
   </div>
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account">
     <img src="https://avatars.githubusercontent.com/u/133674582?s=400&u=929f972579bd25dc326ebdc1bf721ef1ed7dd2a7&v=4" class="w3-circle" style="height:23px;width:23px" alt="Avatar">
@@ -246,11 +245,11 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-theme-d3 w3-padding-16">
-  <h5>Footer</h5>
+  <h5>Social Media Demo Page</h5>
 </footer>
 
 <footer class="w3-container w3-theme-d5">
-  <p>Made with <a href="https://www.w3schools.com/spaces" target="_blank">W3Schools Spaces</a></p>
+  <p>Made by Srikar as a project for the Microsoft Internship in association with FRT</p>
 </footer>
  
 <script>
